k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akwalibnalkayemms-service
  labels:
    app: akwalibnalkayemms
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: http
  selector:
    app: akwalibnalkayemms
---
apiVersion: v1
kind: Service
metadata:
  name: akwalibnalkayemms-nodeport
  labels:
    app: akwalibnalkayemms
spec:
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30090
    protocol: TCP
    name: http
  selector:
    app: akwalibnalkayemms
